# internal/handler/handler.go
@@ -1,7 +1,7 @@
 package handler
 
 import (
-	"kasir-api-go/internal/api"
+	"kasir-api-go/internal/utils"
 	"net/http"
 )
 
@@ -9,8 +9,8 @@ import (
 // @Description Get the status of the API
 // @Tags health
 // @Produce json
-// @Success 200 {object} api.JSONResponse
+// @Success 200 {object} utils.JSONResponse
 // @Router /health [get]
 func HealthHandler(w http.ResponseWriter, r *http.Request) {
-	api.SuccessResponse(w, http.StatusOK, "API Running", map[string]string{"status": "ok"})
+	utils.SuccessResponse(w, http.StatusOK, "API Running", map[string]string{"status": "ok"})
 }
